--- a/style/main.css
+++ b/style/main.css
@@ -16,8 +16,12 @@
 		url('/fonts/BebasNeue/BebasNeueBold.eot?#iefix') format('embedded-opentype'),
 		url('/fonts/BebasNeue/BebasNeueBold.woff') format('woff'),
 		url('/fonts/BebasNeue/BebasNeueBold.ttf') format('truetype');
-	font-weight: bold;
+	font-weight: 600;
 	font-style: normal;
+}
+
+* {
+    box-sizing: border-box;
 }
 
 body {
@@ -28,28 +32,31 @@ body {
 a {
     text-decoration: none;
 }
+ul {
+    padding-inline-start: 0;
+}
 
 li {
-    list-style-type: none;
+    list-style: none;
 }
 
 .header__top, 
 .header__menu {
-    max-width: 1024px;
     display: flex;
+    max-width: 1000px;
     margin: 0 auto;
     flex-wrap: wrap;
 }
 
 .header__top,
 .header__menu   {
-    display: flex; 
     justify-content: space-between;
 }
 
 .header__top {
     margin-top: 20px;
-    padding-bottom: 20px; /*уточнить можно ли указівать*/
+    margin-bottom: 20px; /*уточнить можно ли указівать*/
+    align-items: center;
 }
 
 .header__link {
@@ -57,5 +64,33 @@ li {
 }
 p, a {
     font-family: 'bebas-bold';
+}
+.header__search {
+    position: relative;
+    max-width: 440px;
+    width: 100%;
+}
+.header__search-img {
+    position: absolute;
+    right: 4px;
+    top: 4px;
+}
+.header__search-input {
+    width: 100%;
+    height: 28px;
+    border: 1px solid #e2e2e2;
+    padding: 5px;
+    color: #e2e2e2;
+    outline-style: none
+}
+.header__cart {
+    display: flex;
+    align-items: center;
+}
 
+.header__cart-text {
+    font-family: Bebas-bold;
+    color: #999999;
+    font-size: 30px;
+    margin: 8px 0 0 16px;
 }
